# serializer version: 1
# name: TestSweepCheck.test_bad_zip_file
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': 'Unable to interpret NCBI result',
    'id': 4,
    'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
    'ready': False,
    'result': None,
    'rid': 'RID_12345',
    'task': None,
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  })
# ---
# name: TestSweepCheck.test_result
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'id': 4,
    'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
    'ready': True,
    'result': dict({
      'hits': list([
      ]),
      'masking': None,
      'params': list([
      ]),
      'program': 'blast',
      'stat': 'stat',
      'target': dict({
        'name': 'foo',
        'sequence': 'ATAGAGAACTGTACTAGCTGATCGATCTGACGTAGCAC',
      }),
      'version': '1.2.3',
    }),
    'rid': 'RID_12345',
    'task': None,
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  })
# ---
